kubernetes/platform/external-dns/app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.13.5
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=homelab.yekvitka.com
        - --provider=rfc2136
        - --rfc2136-host=10.0.0.1
        - --rfc2136-port=53
        - --rfc2136-zone=homelab.yekvitka.com
        - --rfc2136-tsig-secret=$(RFC2136_TSIG_SECRET)
        - --rfc2136-tsig-secret-alg=hmac-sha256
        - --rfc2136-tsig-keyname=externaldns-key
        # - --rfc2136-tsig-axfr
        # - --rfc2136-insecure
        - --txt-owner-id=k3s
        - --policy=sync
        - --annotation-filter=kubernetes.io/ingress.class=nginx
        - --txt-prefix=ext-dns-
        - --log-level=info
