kubernetes/platform/external-dns/app/manifests/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: test.homelab.yekvitka.com
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  rules:
  - host: test.homelab.yekvitka.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes
            port:
              number: 443
